# LearningGLSL

./: .gitignore  README.md
lighthouse3d/: CMakeLists.txt
lighthouse3d/src/: ogl3.cpp  shader.frag  shader.vert  textfile.cpp
